fix BodyChild layout issues

--- a/styles/_comp.Copyright.less
+++ b/styles/_comp.Copyright.less
@@ -13,8 +13,7 @@
 // ^updated
 // 2016-03-01
 .c-Copyright {
-  margin-left: -@body_padding; margin-right: -@body_padding;
-  width: calc(~'100% + ' (2 * @body_padding)); // because can’t use width: auto
+  width: calc(~'100% + ' (2 * 1rem)); // because can’t use `width: auto` // FIXME use @p-body_padding
   text-align: center;
   background-color: @color_asce_primary;
   color: @color_asce_header_txt;
