--- a/styles/_comp.Hero.less
+++ b/styles/_comp.Hero.less
@@ -11,7 +11,6 @@
 // ^updated
 // 2016-03-01
 .c-Hero {
-  margin-left: -@body_padding; margin-right: -@body_padding;
   padding: @boxpadding_T;
   text-align: center;
   background-color: #074d1c;
